fix issues